[tool.poetry]
name = "tex-recite"
version = "0.1.1"
description = "Migrate a LaTeX document from one bibliography to another"
authors = ["Vadim Liventsev <dev@vadim.me>"]
packages = [
    { include = "recite.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.5"
texsoup = "^0.3"
bibtexparser = "^2.0.0b8"
unisim = {version = "^1.0", extras = ["tensorflow"]}

[tool.poetry.scripts]
recite = "recite:recite__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"